<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cfe_sbn_plugin</name>
  <version>0.0.1</version>
  <description>plugin to for the BRASH Bridge that connects to SBN UDP plugins</description>
  <maintainer email="swhart@traclabs.com">swhart</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- <depend>cfs_groundsystem_msgs</depend> -->
  <depend>fsw_ros2_bridge</depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>


</package>
